Sat Feb  6 14:51:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_regex_casefold.rb: Tests for three case folding
	  primitives (mbc_case_fold, get_case_fold_codes_by_str,
	  apply_all_case_fold) in the various encodings. Currently only known
	  good encodings are tested to avoid test failures. For bug hunting,
	  start by adding more encodings with
	      generate_test_casefold encoding
	  (with Kimihito Matsui)

Sat Feb  6 14:37:16 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c, test/ruby/enc/test_case_mapping.rb: Implemented :fold
	  option for String#downcase by using case folding data from
	  regular expression engine, and added a few simple tests.
	  (with Kimihito Matsui)

Fri Feb  5 20:08:59 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: added tests for :ascii option.
	  (with Kimihito Matsui)

Fri Feb  5 12:22:20 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_mult): Use int128_t for overflow detection.

	* bignum.c (rb_uint128t2big): added for opt_mult.

	* bignum.c (rb_uint128t2big): added for rb_uint128t2big..

	* configure.in: define int128_t, uint128_t and related MACROs.
	  Initially introduced by r41379 but reverted by r50749.

Thu Feb  4 21:05:17 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Activated :ascii flag for ASCII-only case conversion
	  (with Kimihito Matsui)

Thu Feb  4 17:38:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (reg_set_source): make source string frozen without
	  copying.

	* re.c (rb_reg_initialize_m): refactor initialization with
	  encoding.

Thu Feb  4 15:35:29 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_fstring_enc_new, rb_fstring_enc_cstr): functions to
	  make fstring with encoding.

Thu Feb  4 14:42:29 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk: Added Unicode data file SpecialCasing.txt to be additionally
	  downloaded (with Kimihito Matsui)
